Rename example plugin and setup

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Pest Control Improved
+author=Glizzington
+description=An improved version of the built-in Pest Control plugin
+tags=pest,control,pc,minigame
+plugins=com.pestcontrolimproved.PestControlImprovedPlugin
